Fixes for brace styling and command chaining overflow issue

--- a/MathClient/src/main/webapp/css/client.css
+++ b/MathClient/src/main/webapp/css/client.css
@@ -19,6 +19,7 @@ canvas {
 
 .CodeMirror {
    background: black;
+   color: #ddd;
 }
    
 .CodeMirror-gutter {
